# infinite-realms-production

./: .gitignore  ADD-IMAGES-COLUMN.md  DEPLOYMENT_SUMMARY.md  MONITORING_AND_BACKUPS.md  README-DOCUMENTATION-SYSTEM.md  package-lock.json  package.json  spell-audit-implementation-summary.md  spell-mapping-audit-workplan.md
.beads/: issues.jsonl
.factory/: mcp.json
.husky/: commit-msg  pre-commit
ai-adventure-scribe-main/: .env.example  .gitignore  .prettierignore  .prettierrc.json  .versionrc.json  AGENTS.md  ARCHITECTURE.md  AUTOMATED_DEPLOYMENT_WITH_MCP.md  CLAUDE.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  INTEGRATION_TEST_REPORT.md  MEMORY_TESTS_REPORT.md  MIGRATION_CLEANUP.md  MIGRATION_REPORT_SESSION_CONSTRAINTS.md  MVP-SETUP.md  N+1_FIX_VISUAL.md  PERFORMANCE_BENCHMARKING_REPORT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_QUICK_REFERENCE.md  PHASE_4.1_COMPLETION_SUMMARY.md  POST-MERGE-TODO.md  QUERY_COMPARISON.sql  README-BACKGROUND-IMAGE-SETUP.md  README.md  README_FOUNDRY.md  REMAINING_ISSUES_PLAN.md  SECURITY.md  SERVICE_COMPATIBILITY_NOTES.md  SETUP_BACKGROUND_IMAGES.md  SPELL_VALIDATION_FIX.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  TROUBLESHOOTING.md  UNIT_11_ATOMIC_CHARACTER_CREATION.md  UNIT_12_MESSAGE_SEQUENCES_REPORT.md  (+31 more)
ai-adventure-scribe-main/crewai-service/: main.py  pyproject.toml
ai-adventure-scribe-main/crewai-service/crewai_app/: agents.py  flows.py  state_store.py  tools.py
ai-adventure-scribe-main/crewai-service/tests/: test_dm_options.py  test_dm_respond.py
(+2349 files in other folders)
