[tool.poetry]
name = "crewai-service"
version = "0.1.0"
description = "CrewAI DM orchestrator service"
authors = ["AI Dungeon Master Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
httpx = "^0.27.2"
pydantic = "^2.9.2"

# CrewAI is optional during scaffolding; comment in when available
# crewai = "^0.51.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
